--- a/login/register.html
+++ b/login/register.html
@@ -1,290 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register | FLIPS</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sign Up</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
   <style>
-    .toast-container {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 9999;
-    }
-    .login-container {
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 10px;
+    body {
+      background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
+      font-family: Candara;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       overflow: hidden;
-    }
-    .login-left {
-      background-size: cover;
-      background-position: center;
-    }
-    .login-left .logo {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-    }
-    .login-right {
-      padding: 30px;
-    }
-    .form-heading {
-      text-align: center;
-    }
-    .form-heading hr {
-      width: 50%;
-      margin: 0 auto;
-      border: 2px solid #000;
-    }
-    .form-control {
-      margin-bottom: 15px;
-    }
-    .login-btn {
-      display: block;
-      width: 100%;
-    }
-    .forgot-password {
-      text-align: center;
-      margin-top: 15px;
-    }
-    .redirect-links {
-      font-size: small;
-    }
-    .nav-link .icon-circle {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background-color: #F7F7F7;
-      color: #7b4d11;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      transition: background-color 0.3s ease;
       position: relative;
     }
-    .nav-item:hover .icon-circle {
-      background-color: #93e4c1;
-      color: #000;
+
+    .card {
+      width: 100%;
+      max-width: 400px;
+      border-radius: 0;
+      z-index: 2;
     }
-    .icon-text {
-      position: absolute;
-      bottom: -21px;
-      left: 50%;
-      transform: translateX(-50%);
-      white-space: nowrap;
-      opacity: 0;
-      transition: opacity 0.7s ease;
-      font-size: 16px;
+    .card-title {
+      font-weight: bold;
     }
-    .nav-link:hover .icon-text {
-      opacity: 1;
+    /* Custom underline input style */
+    .form-control-underline {
+      border: none;
+      border-bottom: 1px solid #ccc;
+      border-radius: 0;
+      box-shadow: none;
+    }
+    .form-control-underline:focus {
+      border-bottom: 2px solid #7b4d11;
+      outline: none;
+      box-shadow: none;
+    }
+    #emailInput::placeholder {
+      font-size: 0.85rem;
+    }
+    .next-btn, .sign-btn {
+      border-radius: 0;
+      border: none;
+      outline: none;
+      color: white;
+      font-weight: bold;
+      background-color: #7b4d11;
+    }
+    .next-btn::focus, .sign-btn::focus {
+      background-color: #7b4d11;
+    }
+    .next-btn:hover, .sign-btn:hover {
+      background-color: #7b4d11;
+      color: white;
+    }
+    .spinner-dots {
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+    }
+    .spinner-dots div {
+      width: 10px;
+      height: 10px;
+      background-color: #0078d4;
+      border-radius: 50%;
+      animation: bounce 1s infinite ease-in-out;
+    }
+    .spinner-dots div:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+    .spinner-dots div:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+    @keyframes bounce {
+      0%, 80%, 100% { transform: scale(0); }
+      40% { transform: scale(1); }
+    }
+    .backBtn {
+      color: #7b4d11;
+      cursor: pointer;
+    }
+    .link-small {
+      font-size: 0.9rem;
     }
   </style>
 </head>
-<body style="background: #ADE0C2;">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light mb-4">
-      <div class="container-fluid">
-        <!-- Left Section: Home Icon -->
-        <div class="d-flex align-items-center">
-          <a class="nav-link" href="../index.html">
-            <span class="icon-circle">
-              <i class="bi bi-house-check-fill fs-4"></i>
-              <span class="icon-text">Home</span>
-            </span>
-          </a>
+<body>
+  <!-- Blurred Background Video -->
+  <video autoplay muted loop playsinline
+    class="position-fixed w-100 h-100 object-fit-cover z-n1"
+    style="filter: blur(4px); transform: scale(1.05);">
+    <source src="/assets/video/bg.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Sign up form -->
+  <div class="card shadow-lg p-4">
+    <div class="card-body">
+      <div class="d-flex align-items-center justify-content-center mb-4">
+        <img src="/assets/img/logo.png" alt="FLIPS" style="height: 40px;">
+      </div>
+      <h6 class="card-title mb-4">Create account</h6>
+
+      <div id="emailError" class="text-danger mb-2 d-none" style="font-size: 0.9rem;">
+        Enter a valid email address
+      </div>
+      <div id="step-email">
+        <input type="email" class="form-control form-control-underline mb-4" id="emailInput" placeholder="someone@example.com" required>
+
+        <div class="d-flex justify-content-end mt-4">
+          <button class="btn next-btn px-5" id="nextBtn">Next</button>
         </div>
-        <!-- Right Section: Login -->
-        <div class="d-flex align-items-center">
-          <a class="nav-link" href="login.html">
-            <span class="icon-circle">
-              <i class="bi bi-box-arrow-in-right fs-4"></i>
-              <span class="icon-text">Sign In</span>
-            </span>
-          </a>
+        <div class="d-flex align-items-center justify-content-center mt-4" style="font-size: 0.9rem;">
+          <p>Already have an account? <a href="login.html">Sign in</a></p>
         </div>
       </div>
-    </nav>
-    <div class="toast-container">
-      <!-- Success Toast -->
-      <div id="successToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header bg-success text-white">
-          <strong class="me-auto">Success</strong>
-          <button type="button" class="ms-2 mb-1 btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+
+      <div id="loading" class="text-center d-none">
+        <div class="spinner-dots my-3">
+          <div></div><div></div><div></div>
         </div>
-        <div class="toast-body">Successfully registered. Please check your email for verification link.</div>
       </div>
-      <!-- Error Toasts -->
-      <div id="wrongCredentialsToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header bg-danger text-white">
-          <strong class="me-auto">Error</strong>
-          <button type="button" class="ms-2 mb-1 btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+
+      <div id="step-password" class="d-none">
+        <!-- Back arrow -->
+        <div class="backBtn" id="backBtn">
+            <i class="bi bi-arrow-left-circle"></i> <span id="backEmail"></span>
         </div>
-        <div class="toast-body">A user profile with the same email exists.</div>
-      </div>
-      <div id="userNotFoundToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header bg-danger text-white">
-          <strong class="me-auto">Error</strong>
-          <button type="button" class="ms-2 mb-1 btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+
+        <input type="text" class="form-control form-control-underline mt-4 mb-3" id="usernameInput" placeholder="Choose a username" required>
+        <input type="password" class="form-control form-control-underline mb-3" id="passwordInput" placeholder="Enter password" required>
+        <input type="tel" class="form-control form-control-underline mb-4" id="phoneInput" placeholder="Phone number" required>
+        <div class="d-flex justify-content-end">
+          <button class="btn sign-btn px-4">Sign Up</button>
         </div>
-        <div class="toast-body">User not found. Please register.</div>
-      </div>
-      <div id="serverErrorToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header bg-danger text-white">
-          <strong class="me-auto">Error</strong>
-          <button type="button" class="ms-2 mb-1 btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body">Server is currently unavailable. Please try again later.</div>
-      </div>
-      <div id="errorToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header bg-danger text-white">
-          <strong class="me-auto">Error</strong>
-          <button type="button" class="ms-2 mb-1 btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body" id="errorToastBody"></div>
-      </div>
-    </div>
-    <div class="container-lg py-5">
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-lg-6">
-          <div class="bg-white p-4 rounded shadow-sm">
-            <!-- Logo -->
-            <div class="text-center mt-4 mb-4">
-              <img src="../assets/img/logo.png" alt="Logo" class="img-fluid" style="max-height: 100px;" />
-            </div>
-            <!-- Redirect to log in -->
-            <p class="text-center text-muted mb-4">
-              Have an account?
-              <a href="login.html" class="text-decoration-none fw-semibold">Sign in</a>
-            </p>
-            <!-- Registration Form -->
-            <form id="registerForm">
-              <div class="mb-4">
-                <input type="text" class="form-control" id="registerUsername" placeholder="Username" required />
-              </div>
-              <div class="mb-4">
-                <input type="email" class="form-control" id="registerEmail" placeholder="Email" required />
-              </div>
-              <div class="mb-4">
-                <input type="password" class="form-control" id="registerPassword" placeholder="Password" required />
-              </div>
-              <div class="mb-4">
-                <input type="text" class="form-control" id="registerPhoneNumber" placeholder="Phone Number" required />
-              </div>
-              <div class="mb-4">
-                <select class="form-select" id="registerCategory" required>
-                  <option value="" disabled selected>Select your category</option>
-                  <option value="Student">Student</option>
-                  <option value="Professional">Professional</option>
-                  <option value="Associate">Associate</option>
-                </select>
-              </div>
-              <!-- Submit Button -->
-              <div class="d-grid">
-                <button type="submit" class="btn fw-bold" style="color: #fff; background-color: #7b4d11; border: none;">
-                  Sign up
-                </button>
-              </div>
-            </form>
-            <!-- Google Sign-in -->
-            <div class="mt-4 mb-5 text-center google-signin-btn">
-              <div id="g_id_onload"
-                data-client_id="87176183588-jm5i53lkdkh320j59panmmcq3pq0iqd3.apps.googleusercontent.com"
-                data-context="signup"
-                data-ux_mode="popup"
-                data-callback="handleCredentialResponse"
-                data-auto_prompt="false"></div>
-              <div class="g_id_signin"
-                data-type="standard"
-                data-shape="rectangular"
-                data-theme="outline"
-                data-text="signup_with"
-                data-size="large"
-                data-logo_alignment="left"></div>
-            </div>
-          </div>
+
+        <div class="d-flex align-items-center justify-content-center mt-4" style="font-size: 0.9rem;">
+          <p>Already have an account? <a href="login.html">Sign in</a></p>
         </div>
       </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Base URL for all AJAX requests
-    const BASE_URL = 'https://flipsintel.org/api'; // Updated to match password reset URL
+    const BASE_URL = 'https://flipsintel.org/api';
+    const emailInput = document.getElementById('emailInput');
+    const emailError = document.getElementById('emailError');
 
-    // Initialize Bootstrap toasts on document ready
-    $(document).ready(function () {
-      $(".toast").toast({ autohide: false });
+    document.getElementById('nextBtn').addEventListener('click', function () {
+      const email = emailInput.value.trim();
+
+      if (!email) {
+        emailError.classList.remove('d-none');
+        return;
+      }
+
+      emailError.classList.add('d-none');
+      document.getElementById('backEmail').textContent = email;
+      document.getElementById('step-email').classList.add('d-none');
+      document.getElementById('loading').classList.remove('d-none');
+
+      setTimeout(() => {
+        document.getElementById('loading').classList.add('d-none');
+        document.getElementById('step-password').classList.remove('d-none');
+      }, 2000);
     });
 
-    // Display error messages in a toast
+    emailInput.addEventListener('input', function () {
+      if (emailInput.value.trim()) {
+        emailError.classList.add('d-none');
+      }
+    });
+
+    document.getElementById('backBtn').addEventListener('click', function () {
+      document.getElementById('step-password').classList.add('d-none');
+      document.getElementById('step-email').classList.remove('d-none');
+    });
+
     function showErrorToast(errors) {
-      const $errorToastBody = $('#errorToastBody');
-      $errorToastBody.empty();
+      const errorToastBody = $('#errorToastBody');
+      errorToastBody.empty();
+
       if (typeof errors === 'object' && !Array.isArray(errors)) {
         for (const [field, messages] of Object.entries(errors)) {
           if (Array.isArray(messages)) {
             messages.forEach(message => {
-              const $div = $('<div>').text(`${field}: ${message}`);
-              $errorToastBody.append($div);
+              errorToastBody.append(`<div>${field}: ${message}</div>`);
             });
           } else {
-            const $div = $('<div>').text(`${field}: ${messages}`);
-            $errorToastBody.append($div);
+            errorToastBody.append(`<div>${field}: ${messages}</div>`);
           }
         }
       } else {
-        const $div = $('<div>').text(errors || 'An unknown error occurred.');
-        $errorToastBody.append($div);
+        errorToastBody.append(`<div>${errors || 'An unknown error occurred.'}</div>`);
       }
-      $('.toast').toast('hide');
+
       $('#errorToast').toast('show');
     }
 
-    // Handle Google login response
-    function handleCredentialResponse(response) {
-      const data = { token: response.credential };
-      $.ajax({
-        url: `${BASE_URL}/google-login/`,
-        type: 'POST',
-        contentType: 'application/json',
-        data: JSON.stringify(data),
-        success: function (res) {
-          localStorage.setItem('token', res.token);
-          $('.toast').toast('hide');
-          $('#successToast').toast('show');
-          setTimeout(function () {
-            window.location.href = '../dashboard/index.html';
-          }, 2000);
-        },
-        error: function (xhr) {
-          console.error('Google registration/login failed: ', xhr.responseJSON || xhr.statusText);
-          $('.toast').toast('hide');
-          $('#serverErrorToast').toast('show');
-        }
-      });
-    }
+    document.querySelector('.sign-btn').addEventListener('click', function () {
+      const username = document.getElementById('usernameInput').value.trim();
+      const email = emailInput.value.trim();
+      const password = document.getElementById('passwordInput').value.trim();
+      const phoneNumber = document.getElementById('phoneInput').value.trim();
 
-    // Handle registration form submission
-    $('#registerForm').on('submit', function (event) {
-      event.preventDefault();
-      const username = $('#registerUsername').val();
-      const email = $('#registerEmail').val();
-      const password = $('#registerPassword').val();
-      const phoneNumber = $('#registerPhoneNumber').val();
-      const category = $('#registerCategory').val();
+      if (!username || !password || !phoneNumber) {
+        showErrorToast('Enter a valid Username or password or phone');
+        return;
+      }
+
       const data = {
         username,
         email,
         password,
         profile: {
           phone_number: phoneNumber,
-          category
+          category: ""  // Optional, or remove if not needed
         }
       };
 
@@ -293,25 +228,17 @@
         type: 'POST',
         contentType: 'application/json',
         data: JSON.stringify(data),
-        success: function (res) {
-          $('.toast').toast('hide');
+        success: function () {
           $('#successToast').toast('show');
-          setTimeout(function () {
+          setTimeout(() => {
             window.location.href = 'login.html';
           }, 2000);
         },
         error: function (xhr) {
-          console.error('Registration failed: ', xhr.responseJSON || xhr.statusText);
           if (xhr.responseJSON) {
-            if (xhr.status === 400 && xhr.responseJSON.email) {
-              $('#wrongCredentialsToast').toast('show');
-            } else if (xhr.status === 401 || xhr.status === 404) {
-              $('#userNotFoundToast').toast('show');
-            } else {
-              showErrorToast(xhr.responseJSON);
-            }
+            showErrorToast(xhr.responseJSON);
           } else {
-            $('#serverErrorToast').toast('show');
+            showErrorToast('Server error. Please try again later.');
           }
         }
       });
