--- a/login/login.html
+++ b/login/login.html
@@ -175,7 +175,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
-    const BASE_URL = 'https://flipsintel.org/api';
+    const BASE_URL = 'https://api.flipsintel.org';
 
     const usernameInput = document.getElementById('usernameInput');
     const emailError = document.getElementById('emailError');
