--- a/login/register.html
+++ b/login/register.html
@@ -147,7 +147,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const BASE_URL = 'https://flipsintel.org/api';
+    const BASE_URL = 'https://api.flipsintel.org';
     const emailInput = document.getElementById('emailInput');
     const emailError = document.getElementById('emailError');
 
