--- a/static/passwordconfirm.html
+++ b/static/passwordconfirm.html
@@ -15,7 +15,7 @@
             const newPassword = document.querySelector('input[name="new_password"]').value;
 
             try {
-                const response = await fetch(`http://127.0.0.1:8000/userprofile/password-reset-confirm/`, {
+                const response = await fetch(`https://api.flipsintel.org/userprofile/password-reset-confirm/`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
