--- a/login/register.html
+++ b/login/register.html
@@ -17,7 +17,6 @@
       overflow: hidden;
       position: relative;
     }
-
     .card {
       width: 100%;
       max-width: 400px;
@@ -27,7 +26,6 @@
     .card-title {
       font-weight: bold;
     }
-    /* Custom underline input style */
     .form-control-underline {
       border: none;
       border-bottom: 1px solid #ccc;
@@ -50,7 +48,7 @@
       font-weight: bold;
       background-color: #7b4d11;
     }
-    .next-btn::focus, .sign-btn::focus {
+    .next-btn:focus, .sign-btn:focus {
       background-color: #7b4d11;
     }
     .next-btn:hover, .sign-btn:hover {
@@ -133,7 +131,13 @@
 
         <input type="text" class="form-control form-control-underline mt-4 mb-3" id="usernameInput" placeholder="Choose a username" required>
         <input type="password" class="form-control form-control-underline mb-3" id="passwordInput" placeholder="Enter password" required>
-        <input type="tel" class="form-control form-control-underline mb-4" id="phoneInput" placeholder="Phone number" required>
+        <input type="tel" class="form-control form-control-underline mb-3" id="phoneInput" placeholder="Phone number" required>
+        <select class="form-control form-control-underline mb-4" id="categoryInput" required>
+          <option value="" disabled selected>Select your category</option>
+          <option value="Student">Student</option>
+          <option value="Professional">Professional</option>
+          <option value="Associate">Associate</option>
+        </select>
         <div class="d-flex justify-content-end">
           <button class="btn sign-btn px-4">Sign Up</button>
         </div>
@@ -144,47 +148,80 @@
       </div>
     </div>
   </div>
+
+  <!-- Toast: Success -->
+  <div class="toast position-fixed bottom-0 end-0 m-3" id="successToast">
+    <div class="toast-header bg-success text-white">
+      <strong class="me-auto">Sign Up Successful</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">Your account has been created! Please check your email for verification.</div>
+  </div>
+
+  <!-- Toast: Error -->
+  <div class="toast position-fixed bottom-0 end-0 m-3" id="errorToast">
+    <div class="toast-header bg-danger text-white">
+      <strong class="me-auto">Sign Up Failed</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body" id="errorToastBody"></div>
+  </div>
+
+  <!-- Toast: Server Error -->
+  <div class="toast position-fixed bottom-0 end-0 m-3" id="serverErrorToast">
+    <div class="toast-header bg-dark text-white">
+      <strong class="me-auto">Server Error</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">Something went wrong. Please try again later.</div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const BASE_URL = 'https://api.flipsintel.org';
+
+    $(document).ready(function () {
+      $(".toast").toast({ autohide: true, delay: 5000 });
+    });
+
     const emailInput = document.getElementById('emailInput');
     const emailError = document.getElementById('emailError');
-  
+
     document.getElementById('nextBtn').addEventListener('click', function () {
       const email = emailInput.value.trim();
-  
+
       if (!email) {
         emailError.classList.remove('d-none');
         return;
       }
-  
+
       emailError.classList.add('d-none');
       document.getElementById('backEmail').textContent = email;
       document.getElementById('step-email').classList.add('d-none');
       document.getElementById('loading').classList.remove('d-none');
-  
+
       setTimeout(() => {
         document.getElementById('loading').classList.add('d-none');
         document.getElementById('step-password').classList.remove('d-none');
       }, 2000);
     });
-  
+
     emailInput.addEventListener('input', function () {
       if (emailInput.value.trim()) {
         emailError.classList.add('d-none');
       }
     });
-  
+
     document.getElementById('backBtn').addEventListener('click', function () {
       document.getElementById('step-password').classList.add('d-none');
       document.getElementById('step-email').classList.remove('d-none');
     });
-  
+
     function showErrorToast(errors) {
       const errorToastBody = $('#errorToastBody');
       errorToastBody.empty();
-  
+
       if (typeof errors === 'object' && !Array.isArray(errors)) {
         for (const [field, messages] of Object.entries(errors)) {
           if (Array.isArray(messages)) {
@@ -198,31 +235,33 @@
       } else {
         errorToastBody.append(`<div>${errors || 'An unknown error occurred.'}</div>`);
       }
-  
+
+      $('.toast').toast('hide');
       $('#errorToast').toast('show');
     }
-  
+
     document.querySelector('.sign-btn').addEventListener('click', function () {
       const username = document.getElementById('usernameInput').value.trim();
       const email = emailInput.value.trim();
       const password = document.getElementById('passwordInput').value.trim();
       const phoneNumber = document.getElementById('phoneInput').value.trim();
-  
-      if (!username || !password || !phoneNumber) {
-        showErrorToast('Enter a valid Username or password or phone');
+      const category = document.getElementById('categoryInput').value;
+
+      if (!username || !password || !phoneNumber || !category) {
+        showErrorToast('Please fill in all fields, including category');
         return;
       }
-  
+
       const data = {
         username,
         email,
         password,
         profile: {
           phone_number: phoneNumber,
-          category: ""  // Optional, or remove if not needed
+          category
         }
       };
-  
+
       // Log the data being posted (redacting sensitive information)
       console.log('Sign-up attempt with data:', {
         username: data.username,
@@ -233,14 +272,16 @@
           category: data.profile.category
         }
       });
-  
+
+      this.disabled = true;
+      this.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Signing Up...';
+
       $.ajax({
         url: `${BASE_URL}/register/`,
         type: 'POST',
         contentType: 'application/json',
         data: JSON.stringify(data),
         success: function (response) {
-          // Log successful response
           console.log('Sign-up successful:', response);
           $('#successToast').toast('show');
           setTimeout(() => {
@@ -248,17 +289,16 @@
           }, 2000);
         },
         error: function (xhr) {
-          // Log error details
+          console.error('Sign-up failed:', xhr.responseJSON);
           if (xhr.responseJSON) {
-            console.error('Sign-up failed:', xhr.responseJSON);
             showErrorToast(xhr.responseJSON);
           } else {
-            console.error('Sign-up failed: Server error', {
-              status: xhr.status,
-              statusText: xhr.statusText
-            });
             showErrorToast('Server error. Please try again later.');
           }
+        },
+        complete: function () {
+          document.querySelector('.sign-btn').disabled = false;
+          document.querySelector('.sign-btn').innerHTML = 'Sign Up';
         }
       });
     });
