--- a/login/register.html
+++ b/login/register.html
@@ -6,85 +6,9 @@
   <title>Sign Up</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
-  <style>
-    body {
-      background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
-      font-family: Candara;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-      position: relative;
-    }
-    .card {
-      width: 100%;
-      max-width: 400px;
-      border-radius: 0;
-      z-index: 2;
-    }
-    .card-title {
-      font-weight: bold;
-    }
-    .form-control-underline {
-      border: none;
-      border-bottom: 1px solid #ccc;
-      border-radius: 0;
-      box-shadow: none;
-    }
-    .form-control-underline:focus {
-      border-bottom: 2px solid #7b4d11;
-      outline: none;
-      box-shadow: none;
-    }
-    #emailInput::placeholder {
-      font-size: 0.85rem;
-    }
-    .next-btn, .sign-btn {
-      border-radius: 0;
-      border: none;
-      outline: none;
-      color: white;
-      font-weight: bold;
-      background-color: #7b4d11;
-    }
-    .next-btn:focus, .sign-btn:focus {
-      background-color: #7b4d11;
-    }
-    .next-btn:hover, .sign-btn:hover {
-      background-color: #7b4d11;
-      color: white;
-    }
-    .spinner-dots {
-      display: flex;
-      justify-content: center;
-      gap: 6px;
-    }
-    .spinner-dots div {
-      width: 10px;
-      height: 10px;
-      background-color: #0078d4;
-      border-radius: 50%;
-      animation: bounce 1s infinite ease-in-out;
-    }
-    .spinner-dots div:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-    .spinner-dots div:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-    @keyframes bounce {
-      0%, 80%, 100% { transform: scale(0); }
-      40% { transform: scale(1); }
-    }
-    .backBtn {
-      color: #7b4d11;
-      cursor: pointer;
-    }
-    .link-small {
-      font-size: 0.9rem;
-    }
-  </style>
+  <!-- Include intl-tel-input CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <!-- Blurred Background Video -->
@@ -108,9 +32,12 @@
       </div>
       <div id="step-email">
         <input type="email" class="form-control form-control-underline mb-4" id="emailInput" placeholder="someone@example.com" required>
+        <div id="emailFeedback" class="error-message d-none"></div>
 
         <div class="d-flex justify-content-end mt-4">
-          <button class="btn next-btn px-5" id="nextBtn">Next</button>
+          <button class="btn next-btn px-5" id="nextBtn">
+            Next
+          </button>
         </div>
         <div class="d-flex align-items-center justify-content-center mt-4" style="font-size: 0.9rem;">
           <p>Already have an account? <a href="login.html">Sign in</a></p>
@@ -130,14 +57,18 @@
         </div>
 
         <input type="text" class="form-control form-control-underline mt-4 mb-3" id="usernameInput" placeholder="Choose a username" required>
+        <div id="usernameFeedback" class="error-message d-none"></div>
         <input type="password" class="form-control form-control-underline mb-3" id="passwordInput" placeholder="Enter password" required>
+        <div id="passwordFeedback" class="error-message d-none"></div>
         <input type="tel" class="form-control form-control-underline mb-3" id="phoneInput" placeholder="Phone number" required>
+        <div id="phoneFeedback" class="error-message d-none"></div>
         <select class="form-control form-control-underline mb-4" id="categoryInput" required>
           <option value="" disabled selected>Select your category</option>
           <option value="Student">Student</option>
           <option value="Professional">Professional</option>
           <option value="Associate">Associate</option>
         </select>
+        <div id="categoryFeedback" class="error-message d-none"></div>
         <div class="d-flex justify-content-end">
           <button class="btn sign-btn px-4">Sign Up</button>
         </div>
@@ -149,67 +80,198 @@
     </div>
   </div>
 
-  <!-- Toast: Success -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="successToast">
-    <div class="toast-header bg-success text-white">
-      <strong class="me-auto">Sign Up Successful</strong>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+  <!-- Alert Container for Centered Notifications -->
+  <div class="alert-container" id="alertContainer">
+    <!-- Success Alert -->
+    <div class="alert alert-success alert-dismissible fade d-none" id="successAlert" role="alert">
+      <strong>Sign Up Successful!</strong> Your account has been created! Please check your email for verification.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body">Your account has been created! Please check your email for verification.</div>
-  </div>
-
-  <!-- Toast: Error -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="errorToast">
-    <div class="toast-header bg-danger text-white">
-      <strong class="me-auto">Sign Up Failed</strong>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    <!-- Error Alert -->
+    <div class="alert alert-danger alert-dismissible fade d-none" id="errorAlert" role="alert">
+      <strong>Sign Up Failed!</strong> <span id="errorAlertBody"></span>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body" id="errorToastBody"></div>
-  </div>
-
-  <!-- Toast: Server Error -->
-  <div class="toast position-fixed bottom-0 end-0 m-3" id="serverErrorToast">
-    <div class="toast-header bg-dark text-white">
-      <strong class="me-auto">Server Error</strong>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    <!-- Server Error Alert -->
+    <div class="alert alert-dark alert-dismissible fade d-none" id="serverErrorAlert" role="alert">
+      <strong>Server Error!</strong> Something went wrong. Please try again later.
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <div class="toast-body">Something went wrong. Please try again later.</div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
   <script>
     const BASE_URL = 'https://api.flipsintel.org';
 
-    $(document).ready(function () {
-      $(".toast").toast({ autohide: true, delay: 5000 });
+    // Initialize intl-tel-input
+    const phoneInput = document.getElementById('phoneInput');
+    const iti = window.intlTelInput(phoneInput, {
+      initialCountry: "us",
+      separateDialCode: true,
+      utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"
     });
 
-    const emailInput = document.getElementById('emailInput');
-    const emailError = document.getElementById('emailError');
+    // Debounce function
+    function debounce(func, wait) {
+      let timeout;
+      return function (...args) {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => func.apply(this, args), wait);
+      };
+    }
 
+    // Validation functions
+    function validateEmail(email) {
+      const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      return re.test(email);
+    }
+
+    function validateUsername(username) {
+      return username.length >= 3;
+    }
+
+    function validatePassword(password) {
+      const errors = [];
+      if (password.length < 8) errors.push("Password must be at least 8 characters long.");
+      if (!/\d/.test(password)) errors.push("Password must contain at least one digit.");
+      if (!/[A-Z]/.test(password)) errors.push("Password must contain at least one uppercase letter.");
+      if (!/[a-z]/.test(password)) errors.push("Password must contain at least one lowercase letter.");
+      if (!/\W/.test(password)) errors.push("Password must contain at least one special character.");
+      return errors;
+    }
+
+    function validatePhoneNumber() {
+      const phoneNumber = iti.getNumber().replace(/\D/g, '');
+      const isValid = iti.isValidNumber();
+      const nationalNumber = phoneNumber.slice(-10);
+      return { isValid, nationalNumber, fullNumber: phoneNumber };
+    }
+
+    function validateCategory(category) {
+      return ['Student', 'Professional', 'Associate'].includes(category);
+    }
+
+    // Real-time validation with debouncing
+    document.getElementById('emailInput').addEventListener('input', debounce(function () {
+      const email = this.value.trim();
+      const feedback = document.getElementById('emailFeedback');
+      feedback.classList.add('d-none');
+      if (email && !validateEmail(email)) {
+        feedback.textContent = 'Please enter a valid email address';
+        feedback.classList.remove('d-none');
+      }
+    }, 300));
+
+    document.getElementById('usernameInput').addEventListener('input', debounce(function () {
+      const username = this.value.trim();
+      const feedback = document.getElementById('usernameFeedback');
+      feedback.classList.add('d-none');
+      if (username && !validateUsername(username)) {
+        feedback.textContent = 'Username must be at least 3 characters long';
+        feedback.classList.remove('d-none');
+      }
+    }, 300));
+
+    document.getElementById('passwordInput').addEventListener('input', debounce(function () {
+      const password = this.value;
+      const feedback = document.getElementById('passwordFeedback');
+      feedback.classList.add('d-none');
+      const errors = validatePassword(password);
+      if (errors.length > 0) {
+        feedback.textContent = errors.join(' ');
+        feedback.classList.remove('d-none');
+      }
+    }, 300));
+
+    phoneInput.addEventListener('input', debounce(function () {
+      const feedback = document.getElementById('phoneFeedback');
+      feedback.classList.add('d-none');
+      const { isValid, nationalNumber } = validatePhoneNumber();
+      if (this.value && (!isValid || nationalNumber.length !== 10)) {
+        feedback.textContent = 'Phone number must be exactly 10 digits for the selected country';
+        feedback.classList.remove('d-none');
+      }
+    }, 300));
+
+    document.getElementById('categoryInput').addEventListener('change', function () {
+      const category = this.value;
+      const feedback = document.getElementById('categoryFeedback');
+      feedback.classList.add('d-none');
+      if (!validateCategory(category)) {
+        feedback.textContent = 'Please select a valid category';
+        feedback.classList.remove('d-none');
+      }
+    });
+
+    // Show alert
+    function showAlert(alertId, message) {
+      const alerts = ['successAlert', 'errorAlert', 'serverErrorAlert'];
+      alerts.forEach(id => {
+        const alert = document.getElementById(id);
+        alert.classList.add('d-none');
+        alert.classList.remove('show');
+      });
+
+      const targetAlert = document.getElementById(alertId);
+      if (alertId === 'errorAlert' && message) {
+        const errorAlertBody = document.getElementById('errorAlertBody');
+        errorAlertBody.innerHTML = '';
+        if (typeof message === 'object' && !Array.isArray(message)) {
+          for (const [field, messages] of Object.entries(message)) {
+            if (Array.isArray(messages)) {
+              messages.forEach(msg => {
+                errorAlertBody.innerHTML += `<div>${field}: ${msg}</div>`;
+              });
+            } else {
+              errorAlertBody.innerHTML += `<div>${field}: ${messages}</div>`;
+            }
+          }
+        } else {
+          errorAlertBody.innerHTML = `<div>${message || 'An unknown error occurred.'}</div>`;
+        }
+      }
+      targetAlert.classList.remove('d-none');
+      targetAlert.classList.add('show');
+      // Auto-dismiss after 5 seconds
+      setTimeout(() => {
+        targetAlert.classList.remove('show');
+        setTimeout(() => targetAlert.classList.add('d-none'), 150);
+      }, 5000);
+    }
+
+    // Form navigation with loader
     document.getElementById('nextBtn').addEventListener('click', function () {
-      const email = emailInput.value.trim();
+      const email = document.getElementById('emailInput').value.trim();
 
-      if (!email) {
-        emailError.classList.remove('d-none');
+      if (!email || !validateEmail(email)) {
+        document.getElementById('emailError').textContent = 'Enter a valid email address';
+        document.getElementById('emailError').classList.remove('d-none');
         return;
       }
 
-      emailError.classList.add('d-none');
-      document.getElementById('backEmail').textContent = email;
-      document.getElementById('step-email').classList.add('d-none');
-      document.getElementById('loading').classList.remove('d-none');
+      document.getElementById('emailError').classList.add('d-none');
+      this.disabled = true;
+      this.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Loading...';
 
       setTimeout(() => {
-        document.getElementById('loading').classList.add('d-none');
-        document.getElementById('step-password').classList.remove('d-none');
-      }, 2000);
+        document.getElementById('backEmail').textContent = email;
+        document.getElementById('step-email').classList.add('d-none');
+        document.getElementById('loading').classList.remove('d-none');
+        this.disabled = false;
+        this.innerHTML = 'Next';
+
+        setTimeout(() => {
+          document.getElementById('loading').classList.add('d-none');
+          document.getElementById('step-password').classList.remove('d-none');
+        }, 2000);
+      }, 500); // Simulate slight delay for loader visibility
     });
 
-    emailInput.addEventListener('input', function () {
-      if (emailInput.value.trim()) {
-        emailError.classList.add('d-none');
+    document.getElementById('emailInput').addEventListener('input', function () {
+      if (this.value.trim()) {
+        document.getElementById('emailError').classList.add('d-none');
       }
     });
 
@@ -218,37 +280,33 @@
       document.getElementById('step-email').classList.remove('d-none');
     });
 
-    function showErrorToast(errors) {
-      const errorToastBody = $('#errorToastBody');
-      errorToastBody.empty();
-
-      if (typeof errors === 'object' && !Array.isArray(errors)) {
-        for (const [field, messages] of Object.entries(errors)) {
-          if (Array.isArray(messages)) {
-            messages.forEach(message => {
-              errorToastBody.append(`<div>${field}: ${message}</div>`);
-            });
-          } else {
-            errorToastBody.append(`<div>${field}: ${messages}</div>`);
-          }
-        }
-      } else {
-        errorToastBody.append(`<div>${errors || 'An unknown error occurred.'}</div>`);
-      }
-
-      $('.toast').toast('hide');
-      $('#errorToast').toast('show');
-    }
-
+    // Form submission with loader
     document.querySelector('.sign-btn').addEventListener('click', function () {
       const username = document.getElementById('usernameInput').value.trim();
-      const email = emailInput.value.trim();
+      const email = document.getElementById('emailInput').value.trim();
       const password = document.getElementById('passwordInput').value.trim();
-      const phoneNumber = document.getElementById('phoneInput').value.trim();
+      const { isValid, fullNumber, nationalNumber } = validatePhoneNumber();
       const category = document.getElementById('categoryInput').value;
 
-      if (!username || !password || !phoneNumber || !category) {
-        showErrorToast('Please fill in all fields, including category');
+      // Validate all fields
+      if (!username || !validateUsername(username)) {
+        showAlert('errorAlert', 'Please enter a valid username (at least 3 characters)');
+        return;
+      }
+      if (!email || !validateEmail(email)) {
+        showAlert('errorAlert', 'Please enter a valid email address');
+        return;
+      }
+      if (!password || validatePassword(password).length > 0) {
+        showAlert('errorAlert', 'Please enter a valid password');
+        return;
+      }
+      if (!isValid || nationalNumber.length !== 10) {
+        showAlert('errorAlert', 'Please enter a valid 10-digit phone number');
+        return;
+      }
+      if (!category || !validateCategory(category)) {
+        showAlert('errorAlert', 'Please select a valid category');
         return;
       }
 
@@ -257,12 +315,11 @@
         email,
         password,
         profile: {
-          phone_number: phoneNumber,
+          phone_number: fullNumber,
           category
         }
       };
 
-      // Log the data being posted (redacting sensitive information)
       console.log('Sign-up attempt with data:', {
         username: data.username,
         email: data.email,
@@ -283,7 +340,7 @@
         data: JSON.stringify(data),
         success: function (response) {
           console.log('Sign-up successful:', response);
-          $('#successToast').toast('show');
+          showAlert('successAlert');
           setTimeout(() => {
             window.location.href = 'login.html';
           }, 2000);
@@ -291,9 +348,9 @@
         error: function (xhr) {
           console.error('Sign-up failed:', xhr.responseJSON);
           if (xhr.responseJSON) {
-            showErrorToast(xhr.responseJSON);
+            showAlert('errorAlert', xhr.responseJSON);
           } else {
-            showErrorToast('Server error. Please try again later.');
+            showAlert('serverErrorAlert');
           }
         },
         complete: function () {
