--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -259,7 +259,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script>
         // Base URL for all AJAX requests
-        const BASE_URL = 'http://flipsintel.org:8000';
+        const BASE_URL = 'https://api.flipsintel.org';
         const INTERVAL_TIME = 30 * 60 * 1000; // 30 minutes
         let idleTimeout;
 
