passwprd reset update

--- a/login/login.html
+++ b/login/login.html
@@ -160,7 +160,10 @@
 
         <div class="d-flex align-items-center justify-content-center mt-4" style="font-size: 0.9rem;">
           <p>New to FLIPS? <a href="register.html">Create an account</a></p>
-        </div>
+      </div>
+      <div class="d-flex align-items-center justify-content-center mt-2" style="font-size: 0.9rem;">
+          <p><a href="password-reset.html">Forgot Password?</a></p>
+      </div>
       </div>
     </div>
   </div>
