--- a/login/password-reset.html
+++ b/login/password-reset.html
@@ -2,61 +2,204 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Reset Password | FLIPS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
+            font-family: Candara, sans-serif;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            position: relative;
+        }
+        .card {
+            width: 100%;
+            max-width: 400px;
+            border-radius: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+        }
+        .card-title {
+            font-weight: bold;
+            color: #7b4d11;
+        }
+        .form-control-underline {
+            border: none;
+            border-bottom: 1px solid #ccc;
+            border-radius: 0;
+            box-shadow: none;
+        }
+        .form-control-underline:focus {
+            border-bottom: 2px solid #7b4d11;
+            outline: none;
+            box-shadow: none;
+        }
+        .btn-primary {
+            background-color: #7b4d11;
+            border-color: #7b4d11;
+            border-radius: 0;
+            font-weight: bold;
+        }
+        .btn-primary:hover {
+            background-color: #5c3a0d;
+            border-color: #5c3a0d;
+        }
+        .btn-outline-primary {
+            border-color: #7b4d11;
+            color: #7b4d11;
+            border-radius: 0;
+            font-weight: bold;
+        }
+        .btn-outline-primary:hover {
+            background-color: #7b4d11;
+            color: white;
+        }
+        .error-message {
+            font-size: 0.8rem;
+            color: red;
+        }
+        .alert-container {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+        .alert {
+            border-radius: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 <body>
-    <div class="container d-flex justify-content-center align-items-center vh-100 mt-5">
-        <div class="reset-container">
-            <h2 class="my-4 text-center mt-5 mb-3" style="font-weight: bold;">Forgot your Password?</h2>
-            <p class="text-center my-3">
-                Please enter the email address you'd like your password
-                reset information sent to.
+    <!-- Blurred Background Video -->
+    <video autoplay muted loop playsinline class="position-fixed w-100 h-100 object-fit-cover z-n1" style="filter: blur(4px); transform: scale(1.05);">
+        <source src="../assets/video/bg.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <!-- Password Reset Form -->
+    <div class="card shadow-lg p-4">
+        <div class="card-body">
+            <div class="d-flex align-items-center justify-content-center mb-4">
+                <img src="../assets/img/logo.png" alt="FLIPS" style="height: 40px;">
+            </div>
+            <h6 class="card-title mb-4 text-center">Forgot Your Password?</h6>
+            <p class="text-center mb-4" style="font-size: 0.9rem;">
+                Enter the email address associated with your account, and we’ll send you a password reset link.
             </p>
             <form id="passwordResetForm">
                 <div class="mb-3">
-                    <label for="email" class="form-label mt-3" style="font-weight: bold; font-size: 15px;">
-                        Enter email address:
-                    </label>
-                    <input type="email" class="form-control" id="email" required>
+                    <label for="email" class="form-label" style="font-weight: bold;">Email Address</label>
+                    <input type="email" class="form-control form-control-underline" id="email" placeholder="Enter your email" required>
+                    <div id="emailFeedback" class="error-message d-none"></div>
                 </div>
-                <button type="submit" class="btn btn-block mb-3"
-                        style="background: #93e4c1; color: #000; font-weight: bold;">
-                    Request reset link
-                </button>
+                <button type="submit" class="btn btn-primary w-100">Request Reset Link</button>
             </form>
-            <a href="login.html" class="btn btn-block"
-               style="background: #fff; color: #93e4c1; border: 0.1px solid #000; font-weight: bold;">
-                Back to Login
-            </a>
+            <a href="login.html" class="btn btn-outline-primary w-100 mt-3">Back to Login</a>
         </div>
     </div>
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"></script>
-   <script>
-       $(document).ready(function(){
-           // Uncomment if you have an element with ID header-placeholder
-           // $("#header-placeholder").load("headers.html");
 
-           $("#passwordResetForm").on('submit', function(event) {
-               event.preventDefault();
-               const email = $("#email").val();
+    <!-- Alert Container -->
+    <div class="alert-container" id="alertContainer">
+        <div class="alert alert-success alert-dismissible fade d-none" id="successAlert" role="alert">
+            <strong>Success!</strong> A password reset link has been sent to your email.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <div class="alert alert-danger alert-dismissible fade d-none" id="errorAlert" role="alert">
+            <strong>Error!</strong> Failed to send reset link. Please check your email and try again.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
 
-               $.ajax({
-                   url: 'https://197.254.53.253:8000/userprofile/password-reset/',
-                   type: 'POST',
-                   data: JSON.stringify({ email: email }),
-                   contentType: 'application/json',
-                   success: function(response) {
-                       alert('Password reset email sent.');
-                   },
-                   error: function(error) {
-                       alert('Error sending password reset email.');
-                   }
-               });
-           });
-       });
-   </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        const BASE_URL = 'https://api.flipsintel.org';
+
+        // Debounce function
+        function debounce(func, wait) {
+            let timeout;
+            return function (...args) {
+                clearTimeout(timeout);
+                timeout = setTimeout(() => func.apply(this, args), wait);
+            };
+        }
+
+        // Email validation
+        function validateEmail(email) {
+            const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            return re.test(email);
+        }
+
+        // Real-time email validation
+        const emailInput = document.getElementById('email');
+        emailInput.addEventListener('input', debounce(function () {
+            const email = this.value.trim();
+            const feedback = document.getElementById('emailFeedback');
+            feedback.classList.add('d-none');
+            if (email && !validateEmail(email)) {
+                feedback.textContent = 'Please enter a valid email address';
+                feedback.classList.remove('d-none');
+            }
+        }, 300));
+
+        // Show alert
+        function showAlert(alertId, message) {
+            const alerts = ['successAlert', 'errorAlert'];
+            alerts.forEach(id => {
+                const alert = document.getElementById(id);
+                alert.classList.add('d-none');
+                alert.classList.remove('show');
+            });
+
+            const targetAlert = document.getElementById(alertId);
+            if (message) {
+                targetAlert.querySelector('strong').nextSibling.textContent = ` ${message}`;
+            }
+            targetAlert.classList.remove('d-none');
+            targetAlert.classList.add('show');
+            setTimeout(() => {
+                targetAlert.classList.remove('show');
+                setTimeout(() => targetAlert.classList.add('d-none'), 150);
+            }, 5000);
+        }
+
+        // Form submission
+        document.getElementById('passwordResetForm').addEventListener('submit', async function (event) {
+            event.preventDefault();
+            const email = emailInput.value.trim();
+            const submitButton = this.querySelector('button[type="submit"]');
+
+            if (!validateEmail(email)) {
+                showAlert('errorAlert', 'Please enter a valid email address.');
+                return;
+            }
+
+            submitButton.disabled = true;
+            submitButton.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Sending...';
+
+            try {
+                const response = await axios.post(`${BASE_URL}/userprofile/password-reset/`, { email });
+                console.log('Password reset request successful:', response.data);
+                showAlert('successAlert');
+                emailInput.value = '';
+            } catch (error) {
+                console.error('Password reset request failed:', error.response ? error.response.data : error.message);
+                showAlert('errorAlert', error.response?.data?.error || 'Failed to send reset link. Please try again.');
+            } finally {
+                submitButton.disabled = false;
+                submitButton.innerHTML = 'Request Reset Link';
+            }
+        });
+    </script>
 </body>
 </html>
