--- a/login/passwordconfirm.html
+++ b/login/passwordconfirm.html
@@ -1,54 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Reset Password | FLIPS</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #f0f2f8, #e6e9f0);
+            font-family: Candara, sans-serif;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            position: relative;
+        }
+        .card {
+            width: 100%;
+            max-width: 400px;
+            border-radius: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 2;
+        }
+        .card-title {
+            font-weight: bold;
+            color: #7b4d11;
+        }
+        .form-control-underline {
+            border: none;
+            border-bottom: 1px solid #ccc;
+            border-radius: 0;
+            box-shadow: none;
+        }
+        .form-control-underline:focus {
+            border-bottom: 2px solid #7b4d11;
+            outline: none;
+            box-shadow: none;
+        }
+        .btn-primary {
+            background-color: #7b4d11;
+            border-color: #7b4d11;
+            border-radius: 0;
+            font-weight: bold;
+        }
+        .btn-primary:hover {
+            background-color: #5c3a0d;
+            border-color: #5c3a0d;
+        }
+        .error-message {
+            font-size: 0.8rem;
+            color: red;
+        }
+        .alert-container {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+        .alert {
+            border-radius: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
-
 <body>
-    <div class="container-sm">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-                <img src="../public/assets/img/logo.png" width="30" height="30" alt="Logo">
-            </a>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Home</a>
-                    </li>
-                </ul>
-                <span class="navbar-text current-time">
-                    <script>
-                        setInterval(() => {
-                            const now = new Date();
-                            const timeString = now.toLocaleTimeString();
-                            document.querySelector('.current-time').textContent = `Current Time: ${timeString}`;
-                        }, 1000);
-                    </script>
-                </span>
-            </div>
-        </nav>
-        <h2 class="mt-5">Reset Your Password</h2>
-        <form id="resetPasswordForm">
-            <input type="hidden" name="uidb64" value="{{ uidb64 }}">
-            <input type="hidden" name="token" value="{{ token }}">
-            <div class="form-group">
-                <label for="new_password">New Password:</label>
-                <input type="password" id="new_password" name="new_password" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Reset Password</button>
-        </form>
+    <!-- Blurred Background Video -->
+    <video autoplay muted loop playsinline class="position-fixed w-100 h-100 object-fit-cover z-n1" style="filter: blur(4px); transform: scale(1.05);">
+        <source src="../assets/video/bg.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-        <div id="errors" class="mt-3"></div>
+    <!-- Password Reset Confirm Form -->
+    <div class="card shadow-lg p-4">
+        <div class="card-body">
+            <div class="d-flex align-items-center justify-content-center mb-4">
+                <img src="../assets/img/logo.png" alt="FLIPS" style="height: 40px;">
+            </div>
+            <h6 class="card-title mb-4 text-center">Reset Your Password</h6>
+            <form id="resetPasswordForm">
+                <input type="hidden" name="uidb64" value="{{ uidb64 }}">
+                <input type="hidden" name="token" value="{{ token }}">
+                <div class="mb-3">
+                    <label for="new_password" class="form-label" style="font-weight: bold;">New Password</label>
+                    <input type="password" class="form-control form-control-underline" id="new_password" name="new_password" placeholder="Enter new password" required>
+                    <div id="passwordFeedback" class="error-message d-none"></div>
+                </div>
+                <div class="mb-3">
+                    <label for="confirm_password" class="form-label" style="font-weight: bold;">Confirm Password</label>
+                    <input type="password" class="form-control form-control-underline" id="confirm_password" name="confirm_password" placeholder="Confirm new password" required>
+                    <div id="confirmPasswordFeedback" class="error-message d-none"></div>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Reset Password</button>
+            </form>
+            <a href="login.html" class="btn btn-outline-primary w-100 mt-3">Back to Login</a>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+
+    <!-- Alert Container -->
+    <div class="alert-container" id="alertContainer">
+        <div class="alert alert-success alert-dismissible fade d-none" id="successAlert" role="alert">
+            <strong>Success!</strong> Password reset successful. You can now log in.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <div class="alert alert-danger alert-dismissible fade d-none" id="errorAlert" role="alert">
+            <strong>Error!</strong> Failed to reset password. Please try again.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        // Function to get CSRF token from cookies
+        const BASE_URL = 'https://api.flipsintel.org';
+
+        // Get CSRF token from cookies
         function getCookie(name) {
             let cookieValue = null;
             if (document.cookie && document.cookie !== '') {
@@ -64,70 +135,128 @@
             return cookieValue;
         }
 
-        // Function to display errors
-        function displayErrors(errors) {
-            const $errorsDiv = $('#errors');
-            $errorsDiv.empty(); // Clear previous errors
-            const $ul = $('<ul>').addClass('alert alert-danger');
-
-            if (Array.isArray(errors)) {
-                errors.forEach(error => {
-                    const $li = $('<li>').text(error);
-                    $ul.append($li);
-                });
-            } else if (typeof errors === 'object') {
-                // Handle object-based errors (e.g., { new_password: ["error message"] })
-                Object.values(errors).forEach(errorArray => {
-                    if (Array.isArray(errorArray)) {
-                        errorArray.forEach(error => {
-                            const $li = $('<li>').text(error);
-                            $ul.append($li);
-                        });
-                    } else {
-                        const $li = $('<li>').text(errorArray);
-                        $ul.append($li);
-                    }
-                });
-            } else {
-                const $li = $('<li>').text(errors || 'An unknown error occurred.');
-                $ul.append($li);
-            }
-
-            $errorsDiv.append($ul);
+        // Debounce function
+        function debounce(func, wait) {
+            let timeout;
+            return function (...args) {
+                clearTimeout(timeout);
+                timeout = setTimeout(() => func.apply(this, args), wait);
+            };
         }
 
-        // Handle form submission with AJAX
-        $('#resetPasswordForm').on('submit', function (event) {
-            event.preventDefault(); // Prevent default form submission
+        // Password validation
+        function validatePassword(password) {
+            const errors = [];
+            if (password.length < 8) {
+                errors.push('Password must be at least 8 characters long.');
+            }
+            if (!/[A-Z]/.test(password)) {
+                errors.push('Password must contain at least one uppercase letter.');
+            }
+            if (!/[a-z]/.test(password)) {
+                errors.push('Password must contain at least one lowercase letter.');
+            }
+            if (!/[0-9]/.test(password)) {
+                errors.push('Password must contain at least one number.');
+            }
+            return errors;
+        }
 
-            const uidb64 = $('input[name="uidb64"]').val();
-            const token = $('input[name="token"]').val();
-            const newPassword = $('input[name="new_password"]').val();
+        // Real-time password validation
+        const newPasswordInput = document.getElementById('new_password');
+        newPasswordInput.addEventListener('input', debounce(function () {
+            const password = this.value;
+            const feedback = document.getElementById('passwordFeedback');
+            feedback.classList.add('d-none');
+            const errors = validatePassword(password);
+            if (errors.length > 0) {
+                feedback.textContent = errors.join(' ');
+                feedback.classList.remove('d-none');
+            }
+        }, 300));
 
-            $.ajax({
-                url: 'https://197.254.53.253:8000/userprofile/password-reset-confirm/',
-                type: 'POST',
-                headers: {
-                    'X-CSRFToken': getCookie('csrftoken') // Include CSRF token
-                },
-                data: JSON.stringify({
-                    uidb64: uidb64,
-                    token: token,
-                    new_password: newPassword
-                }),
-                contentType: 'application/json',
-                success: function (response) {
-                    alert('Password reset successful!');
-                    window.location.href = '../index.html'; // Redirect after success
-                },
-                error: function (xhr) {
-                    console.error('Error:', xhr.responseJSON || xhr.statusText);
-                    const errorData = xhr.responseJSON || { errors: ['Failed to reset password. Please try again.'] };
-                    displayErrors(errorData.errors || errorData);
-                }
+        const confirmPasswordInput = document.getElementById('confirm_password');
+        confirmPasswordInput.addEventListener('input', debounce(function () {
+            const password = newPasswordInput.value;
+            const confirmPassword = this.value;
+            const feedback = document.getElementById('confirmPasswordFeedback');
+            feedback.classList.add('d-none');
+            if (password !== confirmPassword) {
+                feedback.textContent = 'Passwords do not match.';
+                feedback.classList.remove('d-none');
+            }
+        }, 300));
+
+        // Show alert
+        function showAlert(alertId, message) {
+            const alerts = ['successAlert', 'errorAlert'];
+            alerts.forEach(id => {
+                const alert = document.getElementById(id);
+                alert.classList.add('d-none');
+                alert.classList.remove('show');
             });
+
+            const targetAlert = document.getElementById(alertId);
+            if (message) {
+                targetAlert.querySelector('strong').nextSibling.textContent = ` ${message}`;
+            }
+            targetAlert.classList.remove('d-none');
+            targetAlert.classList.add('show');
+            if (alertId === 'successAlert') {
+                setTimeout(() => {
+                    window.location.href = 'login.html';
+                }, 2000);
+            } else {
+                setTimeout(() => {
+                    targetAlert.classList.remove('show');
+                    setTimeout(() => targetAlert.classList.add('d-none'), 150);
+                }, 5000);
+            }
+        }
+
+        // Form submission
+        document.getElementById('resetPasswordForm').addEventListener('submit', async function (event) {
+            event.preventDefault();
+            const uidb64 = document.querySelector('input[name="uidb64"]').value;
+            const token = document.querySelector('input[name="token"]').value;
+            const newPassword = newPasswordInput.value;
+            const confirmPassword = confirmPasswordInput.value;
+            const submitButton = this.querySelector('button[type="submit"]');
+
+            const passwordErrors = validatePassword(newPassword);
+            if (passwordErrors.length > 0) {
+                showAlert('errorAlert', passwordErrors.join(' '));
+                return;
+            }
+            if (newPassword !== confirmPassword) {
+                showAlert('errorAlert', 'Passwords do not match.');
+                return;
+            }
+
+            submitButton.disabled = true;
+            submitButton.innerHTML = '<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Resetting...';
+
+            try {
+                const response = await axios.post(`${BASE_URL}/userprofile/password-reset-confirm/`, {
+                    uidb64,
+                    token,
+                    new_password: newPassword
+                }, {
+                    headers: {
+                        'X-CSRFToken': getCookie('csrftoken')
+                    }
+                });
+                console.log('Password reset successful:', response.data);
+                showAlert('successAlert');
+            } catch (error) {
+                console.error('Password reset failed:', error.response ? error.response.data : error.message);
+                const errorMessage = error.response?.data?.errors || error.response?.data?.error || 'Failed to reset password. The link may be invalid or expired.';
+                showAlert('errorAlert', errorMessage);
+            } finally {
+                submitButton.disabled = false;
+                submitButton.innerHTML = 'Reset Password';
+            }
         });
     </script>
 </body>
-
 </html>
